fixed meme css on mobile

--- a/styles/memes.css
+++ b/styles/memes.css
@@ -21,6 +21,7 @@
 #meme-display video {
   display: block;
   max-height: 70vh;
+  max-width: 99vw;
   margin-left: auto;
   margin-right: auto;
   margin-top: 1em;
